tests/ui/lint/snapshots/dup_arg_math_max.snap
---
source: tests/ui/lint/mod.rs
---
  [warning] Duplicate arguments
   ╭─[test.lis:6:11]
 5 │   let x: float64 = 1.0
 6 │   let _ = math.Max(x, x)
   ·           ───────┬──────
   ·                  ╰── identical arguments
 7 │ }
   ╰────
  help: Passing the same value twice to `math.Max` makes this call a no-op. Did you mean to pass different values? · code: [lint.duplicate_arguments]
