tests/ui/lint/snapshots/dup_arg_reflect_deep_equal.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Duplicate arguments
   ╭─[test.lis:6:11]
 5 │   let s = "abc"
 6 │   let _ = reflect.DeepEqual(s, s)
   ·           ───────────┬───────────
   ·                      ╰── identical arguments
 7 │ }
   ╰────
  help: Passing the same value twice to `reflect.DeepEqual` makes this call a no-op. Did you mean to pass different values? · code: [lint.duplicate_arguments]
