tests/ui/lint/snapshots/dup_arg_strings_compare.snap
---
source: tests/ui/lint/mod.rs
---
  [warning] Duplicate arguments
   ╭─[test.lis:6:11]
 5 │   let s = "abc"
 6 │   let _ = strings.Compare(s, s)
   ·           ──────────┬──────────
   ·                     ╰── identical arguments
 7 │ }
   ╰────
  help: Passing the same value twice to `strings.Compare` makes this call a no-op. Did you mean to pass different values? · code: [lint.duplicate_arguments]
