tests/ui/lint/snapshots/dup_arg_strings_replace_with_search_replace_dup.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Duplicate arguments
   ╭─[test.lis:7:11]
 6 │   let pat = "x"
 7 │   let _ = strings.Replace(s, pat, pat, 1)
   ·           ───────────────┬───────────────
   ·                          ╰── identical arguments
 8 │ }
   ╰────
  help: Passing the same value twice to `strings.Replace` makes this call a no-op. Did you mean to pass different values? · code: [lint.duplicate_arguments]
